# mcp-seipro

./: .dockerignore  .env.example  .gitignore  .mcpbignore  CLAUDE.md  Dockerfile  LICENSE  Procfile  README.md  bootstrap.py  build_mcpb.py  manifest.json  pyproject.toml  setup_claude.py  test_arvore_expansion.py  test_parser_arvore.py
docs/: roadmap-ecossistema-sei.md
scripts/: bench_consultar_processo.py  bench_listar_processos.py
src/mcp_seipro/: __main__.py  access_control.py  sei_client.py  sei_web_client.py  server.py
