[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-seipro"
version = "0.3.0"
description = "MCP server for SEI (Sistema Eletronico de Informacoes) - 116 tools for mod-wssei v2 REST API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["mcp", "sei", "governo", "documentos", "claude"]
dependencies = [
    "mcp[cli]>=1.12",
    "httpx>=0.27",
    "beautifulsoup4>=4",
    "markdownify>=0.14",
    "pdfplumber>=0.10",
    "pdf2image>=1.16",
    "pytesseract>=0.3",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
mcp-seipro = "mcp_seipro.server:main"

[tool.hatch.build.targets.sdist]
include = ["src/mcp_seipro/", "pyproject.toml", "README.md"]
